Run unit tests with Java 17.