@@ -1,6 +1,6 @@
 <?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <!--
-     Copyright (C) 2011, 2012, 2013, 2015, 2017, 2018, 2019, 2020 XStream committers.
+     Copyright (C) 2011, 2012, 2013, 2015, 2017, 2018, 2019, 2020, 2022 XStream committers.
      All rights reserved.
      
      The software in this package is published under the terms of the BSD
@@ -24,6 +24,15 @@
 
   <profiles>
     <profile>
+      <id>jdk17-ge</id>
+      <activation>
+        <jdk>[17,)</jdk>
+      </activation>
+      <properties>
+        <surefire.argline>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.argline>
+      </properties>
+    </profile>
+    <profile>
       <id>jdk16</id>
       <activation>
         <jdk>16</jdk>
@@ -38,9 +47,9 @@
       </build>
     </profile>
     <profile>
-      <id>jdk9-ge</id>
+      <id>jdk9-ge-jdk16</id>
       <activation>
-        <jdk>[9,)</jdk>
+        <jdk>[9,17)</jdk>
       </activation>
       <properties>
         <surefire.argline>--illegal-access=${surefire.illegal.access}</surefire.argline>
